--- a/index.html
+++ b/index.html
@@ -103,7 +103,6 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-unity"></i></li> Unity<br>
                         <li class="list-inline-item"><i class="fa fa-cube"></i></li> Blender<br>
@@ -145,8 +144,12 @@
             <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
+                    <h2 class="mb-5">Awards &amp; Certifications</h2>
                     <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check text-warning"></i></span>
+                            Microsoft Office Certified
+                        </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             2<sup>nd</sup> place in LM0B Beginner's Game Jam #8
