--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
+                    <div class="subheading mb-3">Programming Languages &amp; Tools</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-unity"></i></li> Unity<br>
                         <li class="list-inline-item"><i class="fa fa-cube"></i></li> Blender<br>
